Etiquetas meta agregadas para mejorar SEO

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Me llamo Mario Espinoza y soy desarrollador fullstack especializado en la creación de aplicaciones web y móviles con tecnologías modernas. Ofrezco soluciones personalizadas y eficientes, abarcando desde el frontend hasta el backend. Descubre mis proyectos y habilidades en Java, Spring Boot, JavaScript, y más.">
+    <meta name="keywords" content="mario espinoza, desarrollador fullstack, Java, Spring Boot, aplicaciones web, JavaScript, portafolio de desarrollo, backend, frontend">
     <title>Mario Espinoza - Desarrollador Full Stack</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;450;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="asset/css/util.css">
     <link rel="stylesheet" href="asset/css/style.css">
     <link rel="stylesheet" href="asset/css/hero.css">
