Corrigiendo el nombre y mejorando etiquetas meta

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Me llamo Mario Espinoza y soy desarrollador fullstack especializado en la creación de aplicaciones web y móviles con tecnologías modernas. Ofrezco soluciones personalizadas y eficientes, abarcando desde el frontend hasta el backend. Descubre mis proyectos y habilidades en Java, Spring Boot, JavaScript, y más.">
-    <meta name="keywords" content="mario espinoza, desarrollador fullstack, Java, Spring Boot, aplicaciones web, JavaScript, portafolio de desarrollo, backend, frontend">
+    <meta name="description" content="Me llamo Mario Espinoza Ponte y soy desarrollador fullstack especializado en la creación de aplicaciones web y móviles con tecnologías modernas. Ofrezco soluciones personalizadas y eficientes, abarcando desde el frontend hasta el backend. Descubre mis proyectos y habilidades en Java, Spring Boot, JavaScript, y más.">
+    <meta name="keywords" content="mario espinoza ponte, mario espinoza, desarrollador fullstack, Java, Spring Boot, aplicaciones web, JavaScript, portafolio de desarrollo, backend, frontend">
     <title>Mario Espinoza - Desarrollador Full Stack</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
 <body>
     <section class="hero">
         <div class="hero__container container">
-            <h2 class="hero__title">Mario Espinoza</h2>
+            <h2 class="hero__title">Mario Espinoza Ponte</h2>
             <p class="hero__subtitle">Desarrollador Full Stack</p>
 
             <nav class="nav">
