Portafolio base acabado

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <title>Mario Espinoza - Desarrollador Full Stack</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;450;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="asset/css/util.css">
     <link rel="stylesheet" href="asset/css/style.css">
     <link rel="stylesheet" href="asset/css/hero.css">
+    <link rel="stylesheet" href="asset/css/project.css">
+    <link rel="stylesheet" href="asset/css/skill.css">
+    <link rel="stylesheet" href="asset/css/education.css">
 </head>
 <body>
     <section class="hero">
@@ -35,11 +38,119 @@
             </nav>
 
             <div class="hero__about">
-                <p class="hero__about-text">iure minus totam nostrum dolore dignissimos inventore nemo atque? Fugit quis libero delectus debitis eligendi.</p>
-                <p class="hero__about-text">iure minus totam nostrum dolore dignissimos</p>
-                <p class="hero__about-text">iure minus totam nostrum dolore dignissimos inventore nemo atque? Fugit quis libero delectus</p>    
+                <p class="hero__about-text">Desarrollador especializado en Java y Spring Framework, con experiencia en la creación de APIs RESTful seguras y eficientes.</p>
+                <p class="hero__about-text">Además, tengo un nivel avanzado en diseño web, enfocándome en crear interfaces modernas y funcionales que mejoren la experiencia del usuario.</p>
+                <p class="hero__about-text">Me gusta mantenerme actualizado y aprender nuevas herramientas para optimizar mis proyectos, buscando siempre un equilibrio entre funcionalidad y estética.</p>    
             </div>
         </div>
     </section>
+
+    <section class="project section-highlight">
+        <div class="project__container container">
+            <h2 class="project__title title-section">Proyectos</h2>
+
+            <div class="project__wrapper-card cardProject">
+
+                <h3 class="cardProject__title">GumSports</h3>
+
+                <p class="cardProject__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quos.
+                </p>
+
+                <div class="cardProject__wrapper-technology">
+
+                    <span class="cardProject__technology">HTML</span>
+                    <span class="cardProject__technology">CSS</span>
+                    <span class="cardProject__technology">JavaScript</span>
+                    <span class="cardProject__technology">Angular</span>
+                    <span class="cardProject__technology">Java</span>
+                    <span class="cardProject__technology">Spring Boot</span>
+
+                    
+                </div>
+
+                <img class="cardProject__img" src="asset/img/proyecto_1_imagen_1.jpg" alt="Imagen de primer proyecto de portafolio">
+                <img class="cardProject__img" src="asset/img/proyecto_1_imagen_2.jpg" alt="Imagen de primer proyecto de portafolio">
+                
+            </div>
+        </div>
+    </section>
+
+    <section class="skill section-highlight">
+        <div class="skill__container container">
+            <h2 class="skill__title title-section">Habilidades</h2>
+
+            <div class="skill__container-skills">
+                <h3 class="skill__subtitle subtitle-section">Lenguajes</h3>
+
+                <div class="skill__wrapper-skills">
+                    <span class="skill__item">HTML</span>
+                    <span class="skill__item">CSS</span>
+                    <span class="skill__item">JavaScript</span>
+                    <span class="skill__item">Java</span>
+                    <span class="skill__item">SQL</span>
+                </div>
+            </div>
+
+            <div class="skill__container-skills">
+                <h3 class="skill__subtitle subtitle-section">Frameworks</h3>
+
+                <div class="skill__wrapper-skills">
+                    <span class="skill__item">Angular</span>
+                    <span class="skill__item">Spring Boot</span>
+                </div>
+            </div>
+
+            <div class="skill__container-skills">
+                <h3 class="skill__subtitle subtitle-section">Herramientas</h3>
+
+                <div class="skill__wrapper-skills">
+                    <span class="skill__item">IntelliJ IDEA</span>
+                    <span class="skill__item">Visual Studio Code</span>
+                    <span class="skill__item">Git</span>
+                    <span class="skill__item">MySQL</span>
+                    <span class="skill__item">PostgreSQL</span>
+                    <span class="skill__item">GitHub</span>
+                    <span class="skill__item">Postman</span>
+                    <span class="skill__item">Docker</span>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="education section-highlight">
+        <div class="education__container container">
+            <h2 class="education__title title-section">Educación</h2>
+
+            <div class="education__wrapper">
+                <div class="education__card">
+                    <p class="education__card-title">Instituto Superior Tecnológico Cibertec</p>
+                    <p class="education__card-career">Computación e informática</p>
+                    <p class="education__card-description">Desarrollo web básico con HTML y CSS. Sólida formación en Java, desde fundamentos de algoritmia y programación orientada a objetos hasta el desarrollo de aplicaciones con Spring Framework, integrando APIs RESTful, seguridad con Spring Security, y bases de datos MySQL.</p>
+                    <p class="education__card-date">2022 - 2025</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="certificates section-highlight">
+        <div class="certificates__container container">
+            <h2 class="certificates__title title-section">Certificados</h2>
+
+            <div class="certificates__wrapper">
+                <div class="certificates__card">
+                    <p class="certificates__card-date">Febrero 2023</p>
+                    <p class="certificates__card-title">Curso Maestro CSS</p>
+                    <p class="certificates__card-description">Academia X</p>
+                </div>
+            </div>
+
+
+
+        </div>
+    </section>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
